Fixed an issue where manage page buttons were unclickable if the browser was too narrow.

--- a/web/style/main.css
+++ b/web/style/main.css
@@ -148,6 +148,8 @@ body
 #head
 {
 	position: absolute;
+	overflow: hidden;
+	min-width: 1024px;
 	margin: 0px;
 	top: 0px;
 	left: 0px;
